# BotSalinha

./: .coderabbit.yaml  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FEATURES.md  GEMINI.md  LICENSE  PRD.md  README.md  ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  bot.py  config.yaml  config.yaml.example  coverage.xml  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  llms.txt  mypy.ini  pyproject.toml  pytest.ini  rag-juridico-precisao-v2-plan.md  ragjuridico-plan.md  ruff.toml  skills-lock.json  test_pydantic.py  test_pydantic2.py
.agent/skill-creator/: SKILL.md
.codex/: AGENTS.md  config.toml  multi-agents.md
.codex/agents/: explorer.toml  reviewer.toml
.github/workflows/: AGENTS.md  test.yml
.vercel/: project.json
assets/: AGENTS.md
config/: AGENTS.md  logrotate.conf
data/: .gitkeep  AGENTS.md  botsalinha.db-shm  botsalinha.db-wal
docs/: AGENTS.md  CACHE_SEMANTICO.md  CLEANCODE_PLAN.md  CODE_DOCUMENTATION.md  DEVELOPER_GUIDE.md  MULTI_PROVIDER.md  OBSERVABILIDADE.md  OBSERVABILITY.md  README.md  SEMANTIC_CACHE_IMPLEMENTATION.md  api.md  architecture.md  architecture_overview_2026.md  backup_restore.md  cli.md  convex-integration.md  deployment.md  operations.md  rag_schema.md
docs/adr/: ADR-001-multi-model-provider.md  AGENTS.md
docs/archive/: convex-integration.md
docs/features/: rag.md
docs/operations/: chromadb-runbook.md  (+1 more)
examples/: convex_example.py
metricas/: AGENTS.md  README.md  base_metric.py  baseline_retrieval.py  config.py  gerar_performance.py  gerar_performance_acesso.py  gerar_performance_rag.py  gerar_qualidade.py  html_generator.py  integrated_evaluation.py  performance_acesso.csv  performance_acesso_summary.csv  performance_geral.csv  performance_geral_summary.csv  performance_rag_componentes.csv  performance_rag_componentes_summary.csv  qualidade_rag.csv  qualidade_rag_summary.csv  rag_all_metrics_20260228_011435.csv  rag_all_metrics_20260228_043933.csv  rag_ingest_metrics_20260302_150154.csv  rag_ingest_metrics_20260302_152125.csv  rag_ingest_metrics_20260303_093155.csv  rag_penal_metrics_20260228_010912.csv  rag_quality_analysis_20260228_012341.txt  rag_quality_analysis_20260228_012437.txt  rag_quality_analysis_20260228_012442.txt  rag_quality_analysis_20260228_012501.txt  rag_report_20260228_011251.csv  relatorio_consolidado_20260228_024136.html  relatorio_consolidado_20260228_024327.html  relatorio_consolidado_20260228_025855.html  relatorio_consolidado_20260228_035315.html  relatorio_consolidado_20260228_050951.html  relatorio_consolidado_20260228_051125.html  relatorio_consolidado_20260302_164719.html  relatorio_consolidado_20260302_165012.html  relatorio_consolidado_20260302_173652.html  relatorio_consolidado_20260302_174748.html  (+2 more)
migrations/: AGENTS.md  alembic.ini  env.py
plans/: AGENTS.md  analise_revisao_codigo.md  extract_manual.py  extract_manual_2.py  extract_manual_3.py  extract_xml.py  extracted_summary.txt
prompt/: AGENTS.md  prompt_v1.md  prompt_v2.json  prompt_v3.md  prompt_v4_rag_first.md
scripts/: AGENTS.md  analizar_qualidade_rag.py  analyze_rag_latency.py  backup.py  backup_supabase_a_to_b_via_mcp.py  backup_supabase_full.sh  gerar_relatorio_rag.py  ingest_all_rag.py  ingest_cf_rag.py  ingest_codebase_rag.py  ingest_docs_to_supabase.py  ingest_penal.py  ingest_rag.py  migrate_to_chroma.py  run_tests.sh  start_supabase_ingest_bg.sh  start_supabase_ingest_tmux.sh  status_supabase_ingest_tmux.sh  stop_supabase_ingest_tmux.sh  test_bot_init.py  test_convex_config.py  test_rag_query.py  test_rag_query_real.py  test_semantic_cache_latency.py  view_metrics.py  warm_semantic_cache.py
skills/: AGENTS.md
src/: AGENTS.md  __init__.py  facade.py  main.py
tests/: AGENTS.md  __init__.py  conftest.py  test_e2e_prompts.py
(+201 files in other folders)
